--- a/cpp/src/arrow/CMakeLists.txt
+++ b/cpp/src/arrow/CMakeLists.txt
@@ -59,6 +59,7 @@ if (ARROW_COMPUTE)
     compute/kernels/boolean.cc
     compute/kernels/cast.cc
     compute/kernels/hash.cc
+    compute/kernels/match.cc
     compute/kernels/util-internal.cc
   )
 endif()
